---
source: src/parser_pest.rs
assertion_line: 42
expression: "parse_transform(\"select [a, b, c]\")"

---
Ok(
    [
        Pair {
            rule: transform,
            span: Span {
                str: "select [a, b, c]",
                start: 0,
                end: 16,
            },
            inner: [
                Pair {
                    rule: select,
                    span: Span {
                        str: "select",
                        start: 0,
                        end: 6,
                    },
                    inner: [],
                },
                Pair {
                    rule: list,
                    span: Span {
                        str: "[a, b, c]",
                        start: 7,
                        end: 16,
                    },
                    inner: [
                        Pair {
                            rule: idents,
                            span: Span {
                                str: "a",
                                start: 8,
                                end: 9,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "a",
                                        start: 8,
                                        end: 9,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                        Pair {
                            rule: idents,
                            span: Span {
                                str: "b",
                                start: 11,
                                end: 12,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "b",
                                        start: 11,
                                        end: 12,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                        Pair {
                            rule: idents,
                            span: Span {
                                str: "c",
                                start: 14,
                                end: 15,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "c",
                                        start: 14,
                                        end: 15,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
